objects/Project_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Date_for_Reports__c</fullName>
        <formula>Activity_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Request__c</fullName>
        <label>Activity Request</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity Desc</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <formula>Project_Goal__r.Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <inlineHelpText>1 = 1 hr
.75 = 45 min
.50 = 30 min
.25 = 15 min</inlineHelpText>
        <label>Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Goal__c</fullName>
        <label>Goal Id</label>
        <referenceTo>Project_Goal__c</referenceTo>
        <relationshipLabel>Project Activities</relationshipLabel>
        <relationshipName>Project_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project_Goal__r.Project_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Activity Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Started</fullName>
                </value>
                <value>
                    <fullName>Work In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                    <default>true</default>
                    <label>Complete</label>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activity__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>Hours__c</columns>
        <columns>Status__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Goal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Activity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>